# modded-nanogpt

./: .gitignore  README.md  debug.sh  plot_ssmax.py  pyproject.toml  run.sh  train_gpt.py  train_gpt2.py
data/: cached_fineweb1B.py
experiment_logs/: 20250201_AttentionSinks1.txt  20250201_AttentionSinksOff.txt  20250202_AttentionSink8.txt  20250202_AttentionSinks8AdamScalars.txt  20250202_MoEUT2_LayerGates.txt  20250202_MoEUT2_Skips.txt  20250202_MoEUT2_ValueEmbeds.txt  20250202_MoEUT2_ValueEmbeds2.txt  20250202_MoEUT2_x0skips.txt  20250202_MoEUTNoLNBias.txt  20250202_MoEUT_55M.txt  20250202_MoEUT_Inits.txt  20250202_MoEUT_ReLU2_RMSNormMLP.txt  20250204_NoSSMax.txt  20250204_NoSSMax320M.txt  20250204_SSMax.txt  20250204_SSMax320M.txt  20250204_SSMax4000.txt
