[project]
name = "modded-nanogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy>=2.1.3",
    "torch",
    "pytorch-triton>=3.2.0",
    "huggingface-hub>=0.26.2",
    "tqdm>=4.67.0",
    "pip>=24.3.1",
    "torchao>=0.8.0",
    "cut-cross-entropy",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]

[tool.uv.sources]
torch = [
    { url = "https://download.pytorch.org/whl/nightly/cu126/torch-2.7.0.dev20250110%2Bcu126-cp312-cp312-manylinux_2_28_x86_64.whl" },
]
pytorch-triton = [
    { index = "pytorch-nightly-cu126" },
]
cut-cross-entropy = { git = "https://github.com/apple/ml-cross-entropy.git" }

[[tool.uv.index]]
name = "pytorch-nightly-cu126"
url = "https://download.pytorch.org/whl/nightly/cu126"
explicit = true

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "lovely-tensors>=0.1.18",
    "pandas>=2.2.3",
    "py-spy>=0.4.0",
]
